Big update (adding function remove and add user, update data)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="light">#FFFFFFF9</color>  #0B0A1B
     <color name="light_gray">#B8B7B6</color>
     <color name="dark_blue">#0B0711</color>
+    <color name="light_green">#4BEA07</color>
 </resources>
